--- a/frontend/src/app/pages/wildfire-types-based-on-geography/wildfire-types-based-on-geography.component.html
+++ b/frontend/src/app/pages/wildfire-types-based-on-geography/wildfire-types-based-on-geography.component.html
@@ -61,15 +61,15 @@
         <button pButton type="submit" class="btn-primary" [disabled]="!dataReady">View Results</button>
       </div>
     </div>
-    <div>
-      <label for="avgFireSizeData">Average Fire Size (Acres)</label>
-      <p-chart id="avgFireSizeData" class="col-12" type="line" [data]="avgFireSizeData" [options]="options"></p-chart>
-    </div>
-    <div>
-      <label for="totalFireSizeData">Total Fire Size (Acres)</label>
-      <p-chart id="totalFireSizeData" class="col-12" type="line" [data]="totalFireSizeData"
-               [options]="options"></p-chart>
-    </div>
+    <!--    <div>-->
+    <!--      <label for="avgFireSizeData">Average Fire Size (Acres)</label>-->
+    <!--      <p-chart id="avgFireSizeData" class="col-12" type="line" [data]="avgFireSizeData" [options]="options"></p-chart>-->
+    <!--    </div>-->
+    <!--    <div>-->
+    <!--      <label for="totalFireSizeData">Total Fire Size (Acres)</label>-->
+    <!--      <p-chart id="totalFireSizeData" class="col-12" type="line" [data]="totalFireSizeData"-->
+    <!--               [options]="options"></p-chart>-->
+    <!--    </div>-->
     <div>
       <label for="totalFireNumData">Total Fire Count</label>
       <p-chart id="totalFireNumData" class="col-12" type="line" [data]="totalFireNumData" [options]="options"></p-chart>
