implement wildfire sizes based on geography component and update landing page

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -3,9 +3,9 @@
   <h1 [routerLink]="['/']">Home</h1>
   <p-toolbar>
     <p-button
-      
+
       (click)="swapTheme()"
-      
-    ><h1>Light</h1></p-button>
+
+    ><h1>{{ themeTitle }}</h1></p-button>
   </p-toolbar>
 </div>
