--- a/frontend/src/app/pages/landing/landing.page.component.html
+++ b/frontend/src/app/pages/landing/landing.page.component.html
@@ -40,7 +40,7 @@
       <button
         pButton
         pRipple
-        label="Wildfires: Changes in Size and Frequency"
+        label="Changes in Wildfire Size and Frequency"
         type="button"
         class="p-button-raised"
         [routerLink]="['/wildfire-changes-in-size-and-frequency']"
@@ -56,15 +56,15 @@
       <button
         pButton
         pRipple
-        label="Agency Containment Time vs Wildfire Size"
+        label="Wildfire Sizes Based on Geography"
         type="button"
         class="p-button-raised"
-        [routerLink]="['/containment-vs-size']"
+        [routerLink]="['/wildfire-sizes-geography']"
       ></button>
       <button
         pButton
         pRipple
-        label="Size of Wildfire Types"
+        label="Wildfire Sizes Based on Type"
         type="button"
         class="p-button-raised"
         [routerLink]="['/wildfire-types-size']"
@@ -72,10 +72,10 @@
       <button
         pButton
         pRipple
-        label="Wildfire Sizes Based on Geography"
+        label="Agency Containment Time vs Wildfire Size"
         type="button"
         class="p-button-raised"
-        [routerLink]="['/wildfire-sizes-geography']"
+        [routerLink]="['/containment-vs-size']"
       ></button>
     </div>
   </p-card>
